# lllmman

./: .gitignore  Cargo.toml  Iced.md  README.md  final_test  test_parse2
.opencode/plans/: 2026-03-31-lllmman-enhancements.md
src/: lib.rs  main.rs
src/core/: log_buffer.rs  mod.rs  provider.rs  registry.rs  server.rs
src/gui/: app.rs  mod.rs
src/models/: config.rs  gpu.rs  mod.rs  model.rs
src/providers/: mod.rs
src/providers/llama_cpp/: mod.rs  provider.rs
src/providers/sglang/: mod.rs  provider.rs
src/providers/vllm/: mod.rs  provider.rs
src/services/: auto_params.rs  cmdline_parser.rs  config_persistence.rs  gpu_detector.rs  mod.rs  model_downloader.rs  model_metadata.rs  monitor.rs  process_detector.rs  provider_installer.rs  recommended_params.rs
src/tui/: app.rs  mod.rs
