[package]
name = "lllmman"
version = "0.1.0"
edition = "2021"

[features]
default = ["gui"]
gui = ["eframe"]
tui = ["ratatui"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
reqwest = { version = "0.11", features = ["json", "blocking"] }
dirs = "5"
log = "0.4"
env_logger = "0.10"
thiserror = "1"
once_cell = "1"
walkdir = "2"
urlencoding = "2"

[dependencies.eframe]
version = "0.27"
optional = true

[dependencies.ratatui]
version = "0.26"
optional = true

[dependencies.crossterm]
version = "0.27"
optional = true

[dev-dependencies]
tempfile = "3"
